--- a/LateralCMS/appsettings.json
+++ b/LateralCMS/appsettings.json
@@ -5,5 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Users": [
+      {
+        "Username": "admin",
+        "Password": "adminpass",
+        "Role": "Admin"
+      },
+      {
+        "Username": "service",
+        "Password": "servicepass",
+        "Role": "Service"
+      },
+      {
+        "Username": "client",
+        "Password": "clientpass",
+        "Role": "Client"
+      }
+    ]
+  }
 }
