--- a/LateralCMS/appsettings.json
+++ b/LateralCMS/appsettings.json
@@ -11,17 +11,23 @@
       {
         "Username": "admin",
         "Password": "adminpass",
-        "Role": "Admin"
+        "Roles": [
+          "Admin"
+        ]
       },
       {
         "Username": "service",
         "Password": "servicepass",
-        "Role": "Service"
+        "Roles": [
+          "Service"
+        ]
       },
       {
         "Username": "client",
         "Password": "clientpass",
-        "Role": "Client"
+        "Roles": [
+          "Client"
+        ]
       }
     ]
   }
