--- a/LateralCMS/appsettings.json
+++ b/LateralCMS/appsettings.json
@@ -16,10 +16,10 @@
         ]
       },
       {
-        "Username": "service",
-        "Password": "servicepass",
+        "Username": "cms",
+        "Password": "cmspass",
         "Roles": [
-          "Service"
+          "CMS"
         ]
       },
       {
