--- a/LateralCMS/appsettings.json
+++ b/LateralCMS/appsettings.json
@@ -9,22 +9,22 @@
   "Authentication": {
     "Users": [
       {
-        "Username": "admin",
-        "Password": "adminpass",
+        "Username": "123456789admin",
+        "Password": "29C11258-CF3D-4788-9FC2-8D92D007BCD5",
         "Roles": [
           "Admin"
         ]
       },
       {
-        "Username": "cms",
-        "Password": "cmspass",
+        "Username": "123456789cms",
+        "Password": "53D10EEE-FFEE-4AD0-86F8-DE95E9F79156",
         "Roles": [
           "CMS"
         ]
       },
       {
-        "Username": "client",
-        "Password": "clientpass",
+        "Username": "123456789client",
+        "Password": "CF99B522-C3DA-4654-997D-FF5E84618121",
         "Roles": [
           "Client"
         ]
